Version 0.5.6: Not yet released
 * Add optional ability to find slaves 2 away horizontally too.
 * Fix minor bug with not removing chest if slaves_vertical_two was set
 * Initial testing on Bukkit 1.3.1

Version 0.5.5: 2012-08-05
 * Fix bug where you right click a new master and it doesn't register for
   adding slaves till you right click it again.

Version 0.5.4: 2012-07-05
 * Add optional ability to find slaves 2 away from a sign

Version 0.5.3: 2012-05-12
 * Add new /mondo find command
 * Remove deprecated search radius
 * Make various performance settings more configurable
 * Remove a lot of old code and general code cleanup
 * This is the first version which no longer supports Bukkit 1.1

Version 0.5.2: 2012-04-03
 * Fix bug where master signs pick up chests 2 away from the sign, not just adjacent.
 * Performance improvements: Use O(1) datastructure for slave operations.
 * Strategies for more compact config
 * Any parsing errors causes an automatic backup of banks.yml

Version 0.5.1: 2012-04-01
 * Fix bug where a master can contain the same chest again as a slave

Version 0.5: 2012-03-29
 * Support Vault permissions
 * Radius is deprecated
 * MondoChests have "owners"
 * Slave signs add to the last clicked chest
 * Multiple chests per item type
 * Optional sign protection
   * Only owners can break signs
   * Break signs to remove slaves / entire mondochests.
 * pretty message coloring
 * slash command support (limited currently)

Version 0.4.2: 2012-02-29
 * Remove spurious debug output

Version 0.4.1: 2012-02-26
 * fix bug that occurred at positive-Z coordinates which caused chests to never be found

Version 0.4: 2012-02-25
 * Permissions support
 * Multiworld support

Version 0.3: 2012-02-24
 * Items are now disambiguated by data value: colors of wool, dyes, etc
   can go into different chests

Version 0.2: 2012-02-24
 * Do not try to make a config file if config.yml exists.
 * Item restacking is off by default in configuration