@@ -1,6 +1,6 @@
 name: MondoChest
 main: us.crast.mondochest.MondoChest
-version: 0.5.6-pre1
+version: 0.5.6-pre2
 author: Crast
 description: "Sort your items into appropriate chests"
 website: "http://dev.bukkit.org/server-mods/mondochest/"
@@ -17,6 +17,7 @@ permissions:
     mondochest.admin.*:
         description: Do all mondochest admin actions
         children:
+            mondochest.admin.open_any: true
             mondochest.admin.break_any: true
             mondochest.admin.add_any_slave: true
             mondochest.admin.reload: true
@@ -33,6 +34,9 @@ permissions:
         default: true
     mondochest.admin.break_any:
         description: "Break anybody's MondoChest signs"
+        default: op
+    mondochest.admin.open_any:
+        description: "Open any MondoChest chests (when protection is on)"
         default: op
     mondochest.admin.add_any_slave:
         description: "Add slaves to other's MondoChests"
