@@ -1,4 +1,5 @@
 Version 0.5.6: Not yet released
+ * Manage who can open chests
  * Add optional ability to find slaves 2 away horizontally too.
  * Fix minor bug with not removing chest if slaves_vertical_two was set
  * Initial testing on Bukkit 1.3.1
